--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build
-        run: cargo build --verbose
+        run: cargo build --all-targets --verbose
       - name: Run tests
         run: cargo test --lib --verbose
   fmt:
@@ -25,5 +25,5 @@ jobs:
       - name: Check Formatting
         run: cargo fmt --check
       - name: Check Code Quality
-        run: cargo clippy -- -D warnings
+        run: cargo clippy --all-targets -- -D warnings
 
