--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,18 +10,14 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  ci:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Build
         run: cargo build --all-targets --verbose
       - name: Run tests
-        run: cargo test --lib --verbose
-  fmt:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
+        run: cargo test --test '*' --lib --verbose
       - name: Check Formatting
         run: cargo fmt --check
       - name: Check Code Quality
